added reactions list resource; updated swagger.json to show new api
